# cepora

./: CMakeLists.txt  LICENSE.md  README.md  config.cmake
cmake/: fixup_bundle.cmake.in
docs/: module.md
js/: main.coffee  process.js
lib/: CMakeLists.txt  README.md
lib/duktape/: CMakeLists.txt  duk_config.h
lib/gl3w/: .gitignore  CMakeLists.txt
lib/glfw/: CMakeLists.txt
lib/imgui/: CMakeLists.txt
src/: CMakeLists.txt  cpr_cepora.c  cpr_cepora.h  cpr_config.h.in  cpr_debug_internal.c  cpr_debug_internal.h  cpr_duktape_helpers.c  cpr_duktape_helpers.h  cpr_error.c  cpr_error.h  cpr_io.c  cpr_io.h  cpr_loadlib.c  cpr_loadlib.h  cpr_macros.h  cpr_main.c  cpr_mod_coffee.c  cpr_mod_coffee.h  cpr_package.c  cpr_package.h  cpr_sys_tools.c  cpr_sys_tools.h  macros.h  main.c
src/modules/: cpr_dummy.c  cpr_dummy.h  cpr_gl.c  cpr_gl.h  cpr_gl3w.c  cpr_gl3w.h  cpr_glfw.c  cpr_glfw.h  cpr_imgui.cxx  cpr_imgui.h  glfw.c
tests/: CMakeLists.txt  arguments.coffee  broken.coffee  fileUtil.coffee  gl3w.coffee  glfw.coffee  hello.coffee  imgui.coffee  loadlib.coffee  module.coffee  run-testcase.py  run-tests.sh.in  test.coffee
tests/win/: CMakeLists.txt  bar.c  bar.h  config.h  foo.c  foo.h  main.c
